--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,22 @@
-@import url(http://fonts.googleapis.com/css?family=Electrolize);
-h1 { font-family: Electrolize; }
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300);
 
-nav ul li {
-    text-decoration: underline;
+
+* {
+    font-weight: 100;
+    font-size: 14px;
 }
 
-nav ul li a {
-    margin:5px;
+
+h1.blog-title a {
+    font-family:"Roboto Condensed";
+    font-size: 28px;
+}
+h1.entry-title {
+    border-bottom: 1px dotted #000;
+}
+
+h1.entry-title a {
+    font-family:"Roboto Condensed";
+    font-size: 20px;
+    
 }
