--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
 
 * {
     font-weight: 100;
     font-size: 14px;
+    font-family: "Roboto","Hiragino Maru Gothic ProN", Meiryo, fantasy;
 }
 
 
@@ -16,7 +18,11 @@ h1.entry-title {
 }
 
 h1.entry-title a {
-    font-family:"Roboto Condensed";
     font-size: 20px;
-    
+}
+
+pre code span {
+    font-family: Monaco, Consolas, 'Courier New', Courier,  monospace;
+    font-size: 13px;
+    line-height: 1.8;
 }
